--- a/assets/css/0-tools/_fonts.scss
+++ b/assets/css/0-tools/_fonts.scss
@@ -1,4 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,300);
-@import url(https://fonts.googleapis.com/css?family=Pacifico);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700);
 
-$Pacifico: Pacifico, cursive;
+$Condensed: Open Sans Condensed, sans-serif;
