--- a/assets/css/4-layouts/post.sass
+++ b/assets/css/4-layouts/post.sass
@@ -8,7 +8,10 @@
       text-decoration: underline
   .meta
     color: $secondary-text
-    font-size: 12px
+    font-size: 14px
   .post-title-image
     img
       size: cover
+  a
+    font-weight: 500
+    color: $primary-color-dark
