--- a/_jadefiles/footer.jade
+++ b/_jadefiles/footer.jade
@@ -1,15 +1,9 @@
 .row
-  .col-sm-4
+  .col-xs-12.col-sm-4.col-sm-offset-2.footer-content
     h1 {{ site.title }}
+    .social-bar.no-padding.col-xs-12
+      img.img-responsive(src='/assets/img/facebook.png')
+      img.img-responsive(src='/assets/img/twitter.png')
+      img.img-responsive(src='/assets/img/google.png')
+      br
     strong Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-  .col-sm-3.col-sm-offset-5.right-bar
-    .col-xs-12.social-bar
-      img(src='/assets/img/facebook.png')
-      img(src='/assets/img/twitter.png')
-      img(src='/assets/img/google.png')
-      img(src='/assets/img/pintrest.png')
-    .col-xs-12.subscribe
-      h3 Subscribe
-      .subscribe-container
-        input(placeholder='john@email.com')
-        button WORK
