--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -1,33 +1,25 @@
-.row#large-header
-  .col-sm-3.social-bar.pull-down
-    img(src='/assets/img/facebook.png')
-    img(src='/assets/img/twitter.png')
-    img(src='/assets/img/google.png')
-    img(src='/assets/img/pintrest.png')
-  .col-sm-6
-    img.logo(src='/assets/img/logo.png')
-  .col-sm-3.search-bar.pull-down
-      span(aria-hidden="true").glyphicon.glyphicon-search
-.row#small-header
-  .row
-    nav.navbar.navbar-default
-      .container-fluid
-        // Brand and toggle get grouped for better mobile display
-        .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='{{ site.baseurl }}') {{ site.title }}
-        // Collect the nav links, forms, and other content for toggling
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li: a(href='/index.html') Home
-            li: a(href='#') Advice
-            li: a(href='#') Recipes
-            li: a(href='#') Training
-            li: a(href='#') Other
-            li: a(href='#') About
-            li: a(href='#') Contact
-            li: a(href='#') Shop
+.row.navRow
+  nav.navbar.navbar-default.navbar-fixed-top
+    .container-fluid
+      // Brand and toggle get grouped for better mobile display
+      .navbar-header
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='{{ site.baseurl }}') {{ site.title }}
+      // Collect the nav links, forms, and other content for toggling
+      #bs-example-navbar-collapse-1.collapse.navbar-collapse
+        ul.nav.navbar-nav
+          li: a(href='/index.html') Home
+          li.dropdown: a.dropdown-toggle(href='#' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false') Categories
+            span.caret
+              ul.dropdown-menu
+                li: a(href='#') Recipes
+                li: a(href='#') Training
+                li: a(href='#') Reviews
+          li: a(href='#') Other
+          li: a(href='#') About
+          li: a(href='#') Contact
+          li: a(href='#') Shop
