--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,15 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
   </head>
   <body>
-    <div class="container">
-
+    <div class="container-fluid" id="navContainer">
       {% include header.html %}
-
+    </div>
+    <div class="container">
       <div class="row">
-        {{ content }}
-      </div>
 
+        {{ content }}
+
+      </div>
     </div>
     <div class="container-fluid" id="footer-container">
       {% include footer.html %}
