--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -8,8 +8,9 @@ h1
 h3
   font-size: 24px
 
-h1, h3
-  font-family: $Pacifico
+h1, h2, h3, h4, h5, h6
+  font-family: $Condensed
+  font-weight: 700
 
 h5
   margin-bottom: 0
@@ -17,11 +18,12 @@ h5
 
 p
   font-size: 16px
+  color: $text
 
   // Posts
 .post-title
   font-size: 36px
-  color: $primary-color
+  color: $text
   margin-top: 5px
 .caption
   color: $secondary-text
@@ -70,6 +72,7 @@ body
     padding: 0 5px 5px 5px
   @media (min-width: 786px)
     padding: 0 0 100px 0
+  min-height: 70vh
 
 .no-padding
   padding: 0
@@ -83,6 +86,6 @@ body
     @media (max-width: 786px)
       display: none
   h1
-    font-family: $Pacifico
+    font-family: $Condensed
     text-align: center
     color: $primary-color-dark
