--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -9,3 +9,5 @@ $divider-color:        #B6B6B6
 $link-color: $accent-color
 $selection-color: $primary-color-light
 $bg-color: white
+
+$text: #212121
