--- a/assets/css/2-modules/footer.sass
+++ b/assets/css/2-modules/footer.sass
@@ -1,50 +1,15 @@
 #footer-container
-  background: $primary-color
-  border-top: 10px solid $primary-color-dark
+  background: $text
+  border-top: 10px solid $primary-color
   color: white
   width: 100vw
   padding-bottom: 50px
-  .row
-    max-width: 1080px
-    margin: auto
-    .col-sm-3
-      height: 200px
-    .right-bar
-      padding: 0
-      @media (min-width: 786px)
-        border-left: solid 2px $primary-color-light
-      height: 100%
-      margin-top: 5%
-      .social-bar
-        img
-          display: inline
-          width: 40px
-          height: 40px
-          margin: 5px
-      .subscribe
-        .subscribe-container
-          height: 50px
-          width: 250px
-          padding: 0
-          input
-            font-family: $Pacifico
-            color: $primary-color
-            font-size: 18px
-            height: 100%
-            width: 185px
-            float: left
-            border: none
-            padding-left: 5px
-            border-bottom-left-radius: 4px
-            border-top-left-radius: 4px
-          button
-            background: $primary-color-light
-            border: none
-            width: 60px
-            height: 50px
-            margin: 0
-            float: left
-            border-top-right-radius: 4px
-            border-bottom-right-radius: 4px
-            font-family: $Pacifico
-            color: $primary-color
+  .footer-content
+    h1
+      margin-bottom: 20px
+    .img-responsive
+      display: inline
+      float: left
+      height: 40px
+      width: 40px
+      margin: 10px 10px 10px 0
