--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -1,24 +1,34 @@
 .home-wrap
-  .recent-articles
-    h5
-      margin-bottom: 5px
-      @media (max-width: 786px)
-        margin-bottom: 25px
-    .category
-      margin-top: 5px
-      margin-bottom: 0
-  // Make small columns pretty
-  @media (min-width: 786px) and (max-width: 992px)
-    .col-sm-3:nth-child(4n+1)
-      clear: both
-  // Make medium columns pretty
-  @media (min-width: 992px)
-    .col-md-2
-      width: 18%
-      padding: 1%
-      display: inline-block
-    .col-md-2:nth-child(5n+1)
-      clear: both
+  #recent-articles-container
+    padding: 0
+    margin: auto
+    .recent-articles
+      h5
+        margin-bottom: 5px
+        @media (max-width: 786px)
+          margin-bottom: 25px
+      .category
+        margin-top: 5px
+        margin-bottom: 0
+    // Make small columns pretty
+    @media (min-width: 786px) and (max-width: 992px)
+      .col-sm-3:nth-child(4n+1)
+        clear: both
+    // Make medium columns pretty
+    @media (min-width: 992px)
+      .col-md-2
+        width: 18%
+        padding: 1%
+        margin: 0
+        display: inline-block
+      .col-md-2:nth-child(5n+1)
+        clear: both
+    @media (min-width: 992px) and (max-width: 1200px)
+      .col-md-2:nth-child(1n)
+        margin-left: 10px
+    @media (min-width: 1200px)
+      .col-md-2:nth-child(1n)
+        margin-left: 20px
   .half-section-left
     @media (min-width: 786px)
       padding-right: 3px
