loops for category pages, set up nav and about page

--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -16,10 +16,8 @@
           li.dropdown: a.dropdown-toggle(href='#' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false') Categories
             span.caret
               ul.dropdown-menu
-                li: a(href='#') Recipes
-                li: a(href='#') Training
-                li: a(href='#') Reviews
-          li: a(href='#') Other
-          li: a(href='#') About
-          li: a(href='#') Contact
-          li: a(href='#') Shop
+                // This is where you would list your categories
+                li: a(href='/categories/recipes.html') Recipes
+                li: a(href='/categories/training.html') Training
+                li: a(href='/categories/reviews.html') Reviews
+          li: a(href='about.html') About
