--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -20,4 +20,4 @@
                 li: a(href='/categories/recipes.html') Recipes
                 li: a(href='/categories/training.html') Training
                 li: a(href='/categories/reviews.html') Reviews
-          li: a(href='about.html') About
+          li: a(href='/about.html') About
