--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -367,8 +367,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h5 {
   margin-bottom: 0;
-  margin-top: 15px;
-  font-size: 16px; }
+  margin-top: 15px; }
 
 p {
   font-size: 16px;
@@ -607,7 +606,9 @@ body {
   transition: 350ms ease-in-out; }
   .home-wrap .article-cards:hover {
     border-radius: 2px;
-    cursor: pointer; }
+    cursor: pointer;
+    -webkit-transform: scale(1.012);
+            transform: scale(1.012); }
     .home-wrap .article-cards:hover .thumbnails {
       -webkit-transform: scale(1.012);
               transform: scale(1.012);
@@ -617,7 +618,7 @@ body {
     margin-top: 5px; }
   .home-wrap .article-cards .meta {
     margin-top: 5px;
-    text-transform: capitalize;
+    text-transform: uppercase;
     color: #727272;
     font-size: 12px; }
     .home-wrap .article-cards .meta:hover {
@@ -625,7 +626,7 @@ body {
   .home-wrap .article-cards .thumbnails {
     width: 100%;
     margin-top: 20px;
-    border-radius: 1px; }
+    border-radius: 4px; }
 
 .home-wrap .border-top {
   border-top: solid 2px #B2EBF2; }
