layout and column changes for mobile optimization

--- a/_jadefiles/footer.jade
+++ b/_jadefiles/footer.jade
@@ -11,5 +11,5 @@
       br
     strong Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     br
-    p.text-right(style='margin-top: 50px; color:white') © 2016 powered by Jekyll, designed by 
+    p(style='margin-top: 50px; color:white') © 2016 powered by Jekyll, designed by 
       a(href='http://github.com/ninapetrop', style='color:white;font-weight:500') Miss
