--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,10 +17,10 @@ layout: default
   <!-- Author Block -->
   <div class="col-xs-12 author-block">
     <h3>About the Author</h3>
-    <div class="col-xs-3">
+    <div class="col-xs-12 col-sm-3">
       <img src="{{ site.url }}/assets/img/johnDoe.png" class="img-responsive authorImg">
     </div>
-    <div class="col-xs-9">
+    <div class="col-xs-12 col-sm-9">
       <strong>{{ page.author }}</strong>
       <p class="text-muted">{{ page.authorTitle }}</p>
       <p>{{ page.authorBio }}</p>
