--- a/assets/css/2-modules/authorBlock.sass
+++ b/assets/css/2-modules/authorBlock.sass
@@ -3,6 +3,9 @@
   border-top: solid 2px $divider-color
   h3
     color: $accent-color
+  .authorImg
+    @media (max-width: 786px)
+      height: 150px
   .social-bar
     width: 100%
     display: inline-flex
