--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -31,9 +31,11 @@ p
   font-size: 14px
   padding: 15px 0 5px 0
 .meta
-  text-transform: uppercase
+  text-transform: capitalize
   color: $secondary-text
-  font-size: 14px
+  font-size: 12px
+  &:hover
+    text-decoration: underline
 
 // Selection colors (easy to forget)
 ::selection
@@ -67,12 +69,7 @@ body
   color: $text-color
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
-
 .container
-  @media (max-width: 786px)
-    padding: 0 5px 5px 5px
-  @media (min-width: 786px)
-    padding: 0 0 100px 0
   min-height: 70vh
 
 .no-padding
