--- a/assets/css/2-modules/footer.sass
+++ b/assets/css/2-modules/footer.sass
@@ -2,7 +2,7 @@
   background: $text
   border-top: 10px solid $primary-color
   color: white
-  width: 100vw
+  width: 100%
   padding-bottom: 50px
   .footer-content
     h1
