--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -1,64 +1,34 @@
-.home-wrap
-  .meta
-    margin-bottom: 10px
-  #recent-articles-container
+#recent-articles-container
+  padding: 0
+  .recent-articles
+    height: 220px
+    padding: 0 auto auto auto
+.post-link
+  font:
+    size: 14px
+    weight: 500
+.half-section
+  @media (max-width: 786px)
     padding: 0
-    margin: auto
-    .recent-articles
-      h5
-        margin-bottom: 5px
-        @media (max-width: 786px)
-          margin-bottom: 25px
-      .category
-        margin-top: 5px
-        margin-bottom: 0
-    // Make small columns pretty
-    @media (min-width: 786px) and (max-width: 992px)
-      .col-sm-3:nth-child(4n+1)
-        clear: both
-    // Make medium columns pretty
-    @media (min-width: 992px)
-      .col-md-2
-        width: 18%
-        padding: 1%
-        margin: 0
-        display: inline-block
-      .col-md-2:nth-child(5n+1)
-        clear: both
-    @media (min-width: 992px) and (max-width: 1200px)
-      .col-md-2:nth-child(1n)
-        margin-left: 10px
-    @media (min-width: 1200px)
-      .col-md-2:nth-child(1n)
-        margin-left: 20px
-  .half-section-left
-    @media (min-width: 786px)
-      padding: 3px
-  .article-cards
-    transition: 350ms ease-in-out
-    &:hover
-      border-radius: 2px
-      cursor: pointer
-      transform: scale(1.012)
-      .thumbnails
-        transform: scale(1.012)
-        opacity: 1
-        filter: alpha(opacity=100)
-    h5
-      margin-top: 5px
-    .meta
-      margin-top: 5px
-      text-transform: uppercase
-      color: $secondary-text
-      font-size: 12px
-      &:hover
-        text-decoration: underline
+.half-section-left
+  @media (min-width: 786px)
+    padding: 3px
+.article-cards
+  transition: 350ms ease-in-out
+  &:hover
+    border-radius: 2px
+    cursor: pointer
     .thumbnails
-      width: 100%
-      margin-top: 20px
-      border-radius: 4px
-  .border-top
-    border-top: solid 2px $primary-color-light
-  .push-down
-    @media (min-width: 786px)
-      padding-top: 40px
+      transform: scale(1.012)
+      opacity: 1
+      filter: alpha(opacity=100)
+  h5
+    margin-top: 5px
+  .thumbnails
+    width: 100%
+    margin-top: 20px
+.border-top
+  border-top: solid 2px $primary-color-light
+.push-down
+  @media (min-width: 786px)
+    padding-top: 40px
