--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -36,6 +36,11 @@ p
   font-size: 12px
   &:hover
     text-decoration: underline
+.meta.date
+  text-decoration: none
+  &:hover
+    text-decoration: none
+    cursor: default
 
 // Selection colors (easy to forget)
 ::selection
