--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -393,6 +393,12 @@ p {
   .meta:hover {
     text-decoration: underline; }
 
+.meta.date {
+  text-decoration: none; }
+  .meta.date:hover {
+    text-decoration: none;
+    cursor: default; }
+
 ::-moz-selection {
   background: #B2EBF2; }
 
@@ -537,7 +543,8 @@ body {
   border-top: 10px solid #00BCD4;
   color: white;
   width: 100%;
-  padding-bottom: 50px; }
+  padding-bottom: 50px;
+  margin-top: 50px; }
   #footer-container .footer-content h1 {
     margin-bottom: 20px; }
   #footer-container .footer-content .img-responsive {
